--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,3 +49,23 @@ body {
   margin-top: 0.5em;
   font-size: small;
 }
+
+/* tract-transitions-group */
+
+.example-enter {
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
